--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ venv_demand/
 
 # Data files
 .DS_Store
-data/source_files/
-data/processed_files/
+*.csv
 
 # Weights & Biases files
 data/processing_scripts/wandb/
